1998-06-15  Stefan Taferner  <taferner@kde.org>

	* kmfilteraction.cpp (process): Removed patch for kmfilter
	action "Move" of 1998-06-14.
	Fixed bug in kmfilteraction "Move" action.

	* Fonts: reader- and composer-window now change
	their font when the settings are changed.

	* Shutdown: improved handling of window-close and
	KMail shutdown- and crash-handling.
	

1998-06-14  Markus Wuebben  <markus@kde.org>

	* kmfilteraction.cpp (process): Applied patch for kmfilter
	actionmove.

1998-06-13  Mario Weilguni   <mweilguni@kde.org> (KMail-0.7.2)

	* key for next_unread_message and prev_unread_message added

1998-06-12  Stefan Taferner  <taferner@kde.org>

	* Folder loading: moved status message in index
	creation to a more suitable place. Should be lots
	faster now.

	* Composer: Now path of last filedialog for attachments
	is stored.

	* Fonts: improved font settings. The HTML widget
	unfortunately only honors the font family. Added new
	functions (kfontutils.h) for easy font to/from string
	conversion.

1998-06-12  Mario Weilguni   <mweilguni@kde.org> (KMail-0.7.1)
	* new sort algorithm - quicksort instead of bubble-sort

1998-06-11  Stefan Taferner  <taferner@kde.org> (KMail-0.7.0)

	* Initial start now opens the settings dialog. Don't
	be alerted, this will happen once for everybody now ;-)

	* Fonts: implemented font setting for HTML widget,
	list of messages, and composer.

	* Drag&Drop: implemented drag&drop of messages to
	folders. Dropping into HTML widget crashes KMail. 
	Could be a bug of the HTML widget, however.

	* Move-message: improved folder selection dialog.

	* Message-list: now cleared properly when the current
	folder is deleted.

1998-06-11  Markus Wuebben  <markus@kde.org> (KMail-0.6.9)

	* KMail now uses KFileDialog only!

1998-06-11  Mario Weilguni   <mweilguni@kde.org> (KMail-0.6.9)
	
	* "P" and "N" (next and previous mail) will cause the header
	list to be scrolled if the new item is not visible
